add --add-modules to compiler, linker and runner